Spacing fix for insights tab content boxes
The default content spacing only applies to the direct children of the holding div (implemented with flexbox gap). Added styling to ensure the same spacing is also applied to the children of the visibility control div.

--- a/bikespace_frontend/src/components/dashboard/sidebar-content/_SidebarContent.module.scss
+++ b/bikespace_frontend/src/components/dashboard/sidebar-content/_SidebarContent.module.scss
@@ -58,6 +58,12 @@ h2.cardHeading {
   }
 }
 
+.InnerMultipleSidebarContent {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
 .chart {
   flex-shrink: 0;
   width: 100%;
